# agentlens

./: .env  .env.example  api.py  main.py  main2.py  notebook-01.ipynb  pyproject.toml  requierments.txt  vision.ipynb
labs/: notebook-01.ipynb  notebook-03.ipynb  notebook-04.ipynb  notebook_02.ipynb
notebooks/: 01_agents_sdk_basics.ipynb
