[project]
name = "agent-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ddgs>=9.12.1",
    "ipykernel>=7.2.0",
    "litellm>=1.83.0",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "openai-agents>=0.13.5",
    "panda>=0.3.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]
